--- a/surprise.html
+++ b/surprise.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Surprise</title>
-  <link rel="stylesheet" href="./Style.css">
-
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
 <div class="envlope-wrapper">
     <div id="envelope" class="close">
         <div class="front flap"></div>
@@ -24,13 +24,15 @@
         </div>
     </div>
 </div>
+
 <div class="reset">
     <button id="open">Open</button>
     <button id="reset">Reset</button>
     <button id="back">Back</button>
 </div>
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script><script  src="./script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="./script.js"></script>
 
 </body>
 </html>
